--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "moxuandi/yii2-tinypng",
     "description": "yii2-tinypng-Description",
+	"homepage": "https://github.com/moxuandi/yii2-tinypng",
     "type": "yii2-extension",
     "keywords": ["yii2","extension"],
     "license": "MIT",
